// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should affect error message after formatting 1`] = `
"
<<<<<< before
ERROR: (no-empty-line-after-opening-brace) /src/tslint-microsoft-contrib/no-empty-line-after-opening-brace/test.ts[2, 1]: Opening brace cannot be followed by empty line

======
no error

>>>>>> after
"
`;

exports[`should be pretty after formatting 1`] = `
"
<<<<<< before
if (true) {

  console.log('something');
}

======
if (true) {
  console.log(\\"something\\");
}

>>>>>> after
"
`;
